# mini-Codex-Loop-Engine

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE_RU.md  LICENSE  README.md  RND_REPORT_RU.md  pyproject.toml
examples/: consolidation_benchmark.py  decomposition_strategy_compare.py  integration_composition_demo.py  multiprocess_contention_benchmark.py  plugin_sandbox_smoke.py  process_reaper_service_demo.py  project_audit_benchmark.py  resource_claims_demo.py  resource_leases_demo.py  resource_recovery_benchmark.py  retryable_side_effect_benchmark.py
loop_engine/: __init__.py  checkpoint.py  cli.py  demo.py  engine.py  events.py  models.py  policies.py  ports.py  release_gate.py  release_history.py  sandbox_release_gate.py
tests/: test_benchmark_confidence.py  test_bounded_integration.py  test_checkpoint_recovery.py  test_coding_leaf.py  test_consolidation_benchmark.py  test_cross_case_profile.py  test_decomposition_replay.py  test_evidence_profile.py  test_fencing_tokens.py  test_filesystem_adapter.py  test_integration_composition.py  test_integration_selectors.py  test_llm_planner.py  test_llm_repair_profile.py  test_llm_task_decomposer.py  test_loop_engine.py  test_multiprocess_contention_benchmark.py  test_parallel_task_scheduler.py  test_plugin_acquisition.py  test_plugin_runtime.py  test_plugin_sandbox.py  test_process_reaper_reports.py  test_process_reaper_service.py  test_process_registry.py  test_project_audit_benchmark.py  test_release_gate.py  test_release_history.py  test_repair_profile.py  test_resource_claims.py  test_resource_lease_heartbeat.py  (+14 more)
(+70 files in other folders)
