[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-codex-loop-engine"
version = "0.39.0"
description = "Universal event-driven loop runtime for agentic R&D."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "gav1964-web"}]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
mini-codex-loop = "loop_engine.cli:main"

[tool.setuptools.packages.find]
include = ["loop_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
